@@ -1,6 +1,7 @@
 Changelog for App-Magpie
 
 {{$NEXT}}
+ - new command: recent
  - old: update modules.skip
 
 1.122721  2012-09-28 15:31:22 Europe/Paris
